# AI-coding-agent-harness

./: .agent_memory.md  .agent_tasks.json  .agent_todo.json  .env.example  .gitignore  README.md  __init__.py  __main__.py  litellm_config.yaml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml
config/: README.md  mcp_config.yaml
core/: __init__.py  client.py  settings.py
docs/: MANUAL_TESTING.md  PUBLISHING.md
harness/: background.py  cache.py  interrupts.py  loop.py  mcp_runtime.py  sessions.py  skills_meta.py  tasks_todos.py  teams.py  tool_dispatch_sync.py  workers.py
memory/: compaction.py
skills/code-review/: SKILL.md
skills/senior-ml-engineer/: SKILL.md
src/klauso/: __init__.py  __main__.py  cli.py
src/klauso/core/: __init__.py  client.py  settings.py
src/klauso/harness/: __init__.py  cache.py  events.py  interrupts.py  loop.py  mcp_runtime.py  sessions.py  skills_meta.py  teams.py  tool_dispatch_sync.py  workers.py  worktrees.py
src/klauso/memory/: __init__.py  compaction.py
src/klauso/resources/: __init__.py  mcp_config.yaml  permissions.yaml
src/klauso/subagents/: runner.py
src/klauso/tools/: __init__.py  permissions.py  schemas.py
subagents/: __init__.py  runner.py
tests/: conftest.py  test_builtin_smoke.py  test_cli_help.py  test_compaction.py  test_dispatch_hooks.py  test_mailbox_lock.py  test_mcp_config.py  test_permissions.py  test_permissions_yaml.py  test_serialization.py  test_tool_merge.py
tools/: builtin.py  permissions.py
utils/: serialization.py
(+7 files in other folders)
